--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "displayName": "TuyaWebPlatform",
-  "name": "@milo526/homebridge-tuya-web",
-  "version": "1.1.1",
+  "name": "ekobres/homebridge-tuya-web",
+  "version": "1.1.1-1",
   "description": "Homebridge plugin for use with Tuya devices (uses Home Assistant Tuya Web API)",
   "main": "dist/index.js",
   "scripts": {
@@ -31,14 +31,14 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/milo526/homebridge-tuya-web"
+    "url": "https://github.com/ekobres/homebridge-tuya-web"
   },
   "funding": {
     "type": "github",
     "url": "https://github.com/sponsors/milo526"
   },
   "bugs": {
-    "url": "https://github.com/milo526/homebridge-tuya-web/issues"
+    "url": "https://github.com/ekobres/homebridge-tuya-web/issues"
   },
   "dependencies": {
     "axios": "^0.24.0",
