--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "displayName": "TuyaWebPlatform",
-  "name": "ekobres/homebridge-tuya-web",
+  "name": "@milo526/homebridge-tuya-web",
   "version": "1.1.1-1",
   "description": "Homebridge plugin for use with Tuya devices (uses Home Assistant Tuya Web API)",
   "main": "dist/index.js",
